# sobjectizer-5.5-raspbian

./: .gitignore
so-5.5.24.4/dev/: CMakeLists.txt
so-5.5.24.4/dev/cmake/: unittest.cmake
so-5.5.24.4/dev/sample/so_5/adv_thread_pool_fifo/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/blinking_led/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/chameneos_prealloc_msgs/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/chameneos_simple/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/chstate/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/chstate_msg_tracing/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/collector_many_performers/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/collector_performer_pair/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/convert_lib/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/coop_listener/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/coop_notification/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/coop_user_resources/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/custom_error_logger/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/deadletter_handler/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/delivery_filters/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/dining_philosophers/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/dining_philosophers_2/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/disp/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/exception_logger/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/exception_reaction/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/hardwork_imit/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/hello_all/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/hello_delay/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/hello_evt_handler/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/hello_evt_lambda/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/hello_periodic/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/hello_world/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/hello_world_adhoc/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/hello_world_simple_not_mtsafe/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/intercom_statechart/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/machine_control/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/make_pipeline/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/many_timers/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/mchain_handler_formats/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/mchain_multi_consumers/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/mchain_select/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/mchain_svc_req/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/modify_resend_as_immutable/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/mutable_msg_agents/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/news_board/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/nohandler_msg_tracing/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/parent_coop/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/pimpl/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/ping_pong/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/ping_pong_minimal/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/private_dispatcher_restarts/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/stop_guard/: CMakeLists.txt
so-5.5.24.4/dev/sample/so_5/svc/parallel_sum/: CMakeLists.txt
(+31 files in other folders)
